--- a/BackEnd/MVC_DemoProject/src/views/update-product.ejs
+++ b/BackEnd/MVC_DemoProject/src/views/update-product.ejs
@@ -54,7 +54,7 @@
     </div>
   <%}%>
 
-  <form action="/update-product" method="POST">
+  <form action="/update-product" method="POST" enctype="multipart/form-data">
     <!-- <label for="id">ID:</label> -->
     <input type="hidden" id="id" name="id" value="<%=product.id%>" required>
 
@@ -68,7 +68,9 @@
     <input type="text" id="price" name="price" pattern="[0-9]+([.,][0-9]+)?" title="Enter a valid number" value="<%=product.price%>"  required>
 
     <label for="imageUrl">Image URL:</label>
-    <input type="text" id="imageUrl" name="imageUrl" value="<%=product.imageUrl%>"  required>
+    <!-- <input type="text" id="imageUrl" name="imageUrl" value="<%=product.imageUrl%>"  required> -->
+    <input type="file" id="imageUrl" name="imageUrl"  accept="Images/*" />
+
 
     <button type="submit">Add Item</button>
   </form>
