--- a/BackEnd/MVC_DemoProject/src/views/update-product.ejs
+++ b/BackEnd/MVC_DemoProject/src/views/update-product.ejs
@@ -67,7 +67,7 @@
     <label for="price">Price:</label>
     <input type="text" id="price" name="price" pattern="[0-9]+([.,][0-9]+)?" title="Enter a valid number" value="<%=product.price%>"  required>
 
-    <label for="imageUrl">Image URL:</label>
+    <label for="imageUrl">Upload Image:</label>
     <!-- <input type="text" id="imageUrl" name="imageUrl" value="<%=product.imageUrl%>"  required> -->
     <input type="file" id="imageUrl" name="imageUrl"  accept="Images/*" />
 
