--- a/BackEnd/MVC_DemoProject/src/views/new-product.ejs
+++ b/BackEnd/MVC_DemoProject/src/views/new-product.ejs
@@ -54,7 +54,7 @@
     </div>
   <%}%>
 
-  <form action="/" method="POST" enctype="multipart/form-data">
+  <form action="/add-product" method="POST" enctype="multipart/form-data">
     <!-- <label for="id">ID:</label>
     <input type="text" id="id" name="id" required> -->
     <input type="hidden" id="id" name="id" value="<%=product?.id%>" required>
