added register, login, logout and implemented cookies and session logics

--- a/BackEnd/MVC_DemoProject/src/views/products.ejs
+++ b/BackEnd/MVC_DemoProject/src/views/products.ejs
@@ -1,43 +1,51 @@
-<table class="table table-dark">
-    <thead>
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Price</th>
-            <th scope="col">Image</th>
-            <th scope="col">Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% products.forEach(product=>{ %>
+<% if(locals.lastVisit){ %>
+    <div class="alert alert-primary" role="alert">
+        Your Last Visit was on : <%= locals.lastVisit %>
+    </div>
+    <% } %>
 
-            <tr>
-                <th>
-                    <%= product.id %>
-                </th>
-                <td>
-                    <%= product.name %>
-                </td>
-                <td>
-                    <%= product.desc %>
-                </td>
-                <td scope="col">
-                    <%= product.price %>
-                </td>
-                <td>
-                    <img width="100px" src="<%= product.imageUrl %>" />
-                </td>
-                <td>
-                    <a href="/update-product/<%= encodeURIComponent(product.id) %>" class="btn btn-warning">Update</a>
+        <h1 class="mt-5 mb-4 header">Products</h1>
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Image</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% products.forEach(product=>{ %>
 
-                    <button class="btn btn-danger" onclick="deleteProduct('<%= product.id %>')">Delete</button>
+                    <tr>
+                        <th>
+                            <%= product.id %>
+                        </th>
+                        <td>
+                            <%= product.name %>
+                        </td>
+                        <td>
+                            <%= product.desc %>
+                        </td>
+                        <td scope="col">
+                            <%= product.price %>
+                        </td>
+                        <td>
+                            <img width="100px" src="<%= product.imageUrl %>" />
+                        </td>
+                        <td>
+                            <a href="/update-product/<%= encodeURIComponent(product.id) %>"
+                                class="btn btn-warning">Update</a>
 
-                    <!-- <a onclick="deleteProduct('<%=product.id%>')" class="btn btn-danger">Delete</a> -->
-                    <!-- <a href="/delete-product/<%= encodeURIComponent(product.id) %>" class="btn btn-danger">Delete</a> -->
-                </td>
-            </tr>
+                            <button class="btn btn-danger" onclick="deleteProduct('<%= product.id %>')">Delete</button>
 
-            <% }) %>
-    </tbody>
-</table>
+                            <!-- <a onclick="deleteProduct('<%=product.id%>')" class="btn btn-danger">Delete</a> -->
+                            <!-- <a href="/delete-product/<%= encodeURIComponent(product.id) %>" class="btn btn-danger">Delete</a> -->
+                        </td>
+                    </tr>
+
+                    <% }) %>
+            </tbody>
+        </table>
